--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h3{
 	padding: 10px 30px;
 }
 .fa{
-	color: #212121;
+	color: #aaa;
 }
 
 /* mobile-responsiveness */
@@ -89,6 +89,6 @@ h3{
 		width: 300px;
 	}
 	.social__section a{
-		padding: 10px 15px;
+		padding: 10px 15px ;
 	}
 }
