--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ html{
   box-sizing: inherit;
   }
 body{
+	margin: 0;
+	padding: 0;
 	background-color: #f5f5f4;
 	color: #262625;
 	font-family: 'Raleway', sans-serif;		
@@ -24,7 +26,7 @@ h3{
 }
 #main{
 	width: 70%;
-	height: 100vh;
+	min-height: 100vh;
 	margin: 0 auto;
 	background-color: #fff;
 	position: relative;
@@ -54,6 +56,8 @@ h3{
 	padding: 5px 10px;
 	border: 1px solid #aaa;
 	color: #aaa;
+	font-size: 12px;
+	border-radius: 3px;
 }
 
 .social__section{
@@ -79,13 +83,24 @@ h3{
 @media (max-width: 500px){
 	#main{
 		width: 100%;
-		height: 100vh;
+		min-height: 500px;
+		padding-top: 10px;
+		padding-bottom: 50px;
 		margin: 0 auto;
 		background-color: #fff;
 		position: relative;	
 	}
 
+	.body__section{
+		width: 100%;
+		padding: 10px;
+		line-height: 30px; 
+		letter-spacing: 1px;
+		word-spacing: 3px;
+		text-align: center;
+	}
 	.social__section{
+		padding-top: 20px;
 		width: 300px;
 	}
 	.social__section a{
