--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ a{
 h3{
 	font-weight: 100;
 }
+.center{
+	text-align: center;
+}
 #main{
 	width: 70%;
 	min-height: 100vh;
@@ -79,6 +82,90 @@ h3{
 	color: #aaa;
 }
 
+/** modal style **/
+#modal{
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.modal_mask{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #aaa;
+	opacity: 0.8;
+	-moz-opacity: 0.8;
+}
+.modal_content{
+	position: relative;
+	margin: 20px auto;
+	max-width: 400px;
+	min-height: 400px;
+	background-color: #f5f5f4;
+	border-radius: 3px;
+	animation: fadein 2s;
+    -moz-animation: fadein 2s; /* Firefox */
+    -webkit-animation: fadein 2s; /* Safari and Chrome */
+    -o-animation: fadein 2s; /* Opera */
+}
+.modal__head{
+	position: relative;
+	height: 50px;
+	border-bottom: 1px solid #ccc;
+}
+.modal__head h4{
+	position: absolute;
+	left: 10px;
+	top: 0px;
+}
+
+.close_modal{
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	font-size: 1.5em;
+	padding: 5px 10px;
+}
+.modal__body{
+	padding: 10px;
+}
+#error-msg{
+	display: none;
+	padding: 10px;
+	border: 0;
+	border-radius: 3px;
+	background-color: #F44336;
+	color: #fff;
+}
+.form-group{
+	display: block;
+	padding: 10px 20px;
+}
+
+.input-form,.text-form{
+	width: 100%;
+	padding: 10px;
+	border: 0px;
+	border-bottom: 1px solid #ccc;
+}
+.text-form{
+	height: 100px;
+}
+.send-btn{
+	padding: 10px 20px;
+	border: 0px;
+	border-radius: 3px;
+	background-color: #aaa;
+	color: #fff;
+}
+/** end of modal style **/
+
 /* mobile-responsiveness */
 @media (max-width: 500px){
 	#main{
@@ -106,4 +193,38 @@ h3{
 	.social__section a{
 		padding: 20px 15px 0px 15px;
 	}
+}
+
+/** simple transition effect **/
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
 }
