--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-body{
-    background-color: #1f2124;
-    color: #ccc;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+* {
+    box-sizing: border-box;
+}
+
+body {
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
+
 /*Fix browser issues*/
+
 ul, menu, dir {
     display: block;
     list-style-type: disc;
@@ -15,6 +19,7 @@ ul, menu, dir {
     -webkit-margin-end: 0px;
     -webkit-padding-start: 0px;
 }
+
 hr {
     display: block;
     -webkit-margin-before: 0.2em;
@@ -24,159 +29,55 @@ hr {
     border-style: inset;
     border-width: 1px;
 }
+
 h1 {
     display: block;
-    font-size: 2em;
+    font-size: 4rem;
     -webkit-margin-before: 0.67em;
     -webkit-margin-after: 0.2em;
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
-    font-weight: bold;
-}
-/*end*/
-.message{
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    color: #222;
-    padding: 15px 20px;
-    text-decoration: none;
-    background-color: #FFF5C3;
-    border-radius: 4px;
-}
-.box{
-    position: relative;
-    box-sizing: border-box;
-    min-height: 100vh;
-    display: block;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-@media (max-width: 500px){
-    .box{
-        position: relative;
-        min-height: 300px;
-        padding: 50px 10px 100px;
-        display: block;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-}
-.home__box{
-    background: linear-gradient(135deg, rgba(240, 95, 87,0.7) 0%, rgba(54, 9, 64,0.7) 100%),url(icon-background.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
+    font-weight: 900;
+    color: #191545;
+    margin-top: 100px;
 }
 
-.home__box img{
-    height: 250px;
-    width: 250px;
-    border: 5px solid #ccc;
-    border-radius: 50%;
-    margin-right: 20px;
+p {
+    line-height: 1.52;
+    font-size: 1.2rem;
+    color: rgb(25, 21, 69);
 }
-h1{
-    color: #FFDB01;
+
+.wrapper {
+    width: 100%;
+    min-height: 100%;
+    padding: 20px;
 }
-.small-text{
-    font-size: 0.6em;
-    color: #ccc;
+
+.content {
+    max-width: 700px;
+    margin: 0 auto;
+    font-family: 'Open Sans', sans-serif;
 }
-.smaller-text{
-    font-size: 0.6em;
-    color: #aa0;    
+
+.social {
+    margin-top: 30px;
 }
-h1 ul{
-    display: block;
-}
-ul li{
+
+.social li {
     display: inline-block;
-    padding-left: 10px;
     padding-right: 10px;
 }
-ul li a{
-    color: #fff;
-}
-.modal{
-    display: none;
-    width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-    background-color: rgba(0,0,0, 0.7);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-}
-.modal-content{
-    position: relative;
-    max-width: 500px;
-    overflow-y: scroll;
-    margin: 15vh auto;
-    box-sizing: border-box;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0, 0.2), 0 6px 20px 0 rgba(0,0,0, 0.2);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
-}
-.modal-content span{
-    position: absolute;
-    display: block;
-    right: 10px;
-    top: 5px;
-    color: #F05F57;
-    zoom: 2;
-}
-.modal-content span:hover{
-    cursor: pointer;
-}
-input[type="text"],input[type="email"]{
-    width: 80%;
-    margin-bottom: 20px;
-    padding: 15px;
-    border: 0;
-    outline: none;
-    border-bottom: 1px dashed #ccc;
-}
-textarea{
-    width: 80%;
-    outline: 0;
-    border: 0;
-    border-bottom: 1px solid #ccc;
-    padding: 15px;
-}
-.modal-content button{
-    padding: 10px 15px;
-    border: 0;
+
+.social li:not(:last-child)::after {
+    content: '/';
+    padding-left: 10px;
 }
 
-/*Animation*/
-@-webkit-keyframes animatetop{
-    from{
-        top: -300px;
-        opacity: 0;
-    }
-    to{
-        top: 0;
-        opacity: 1;
-    }
+a {
+    color: #4433ff;
+    text-decoration: none;
+    display: inline-block;
 }
-@keyframes animatetop{
-    from{
-        top: -300px;
-        opacity: 0;
-    }
-    to{
-        top: 0;
-        opacity: 1;
-    }
-}
+
+a:
