--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,1 +1,49 @@
-@import './utils'
+@import "./utils";
+
+:root {
+  --primary: #000;
+}
+
+* {
+  box-sizing: border-box;
+  line-height: 1.5;
+  // margin-block-start: 0.67em;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Archivo", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button,
+a {
+  cursor: pointer;
+  border: 0;
+  outline: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.center {
+  text-align: center;
+}
+
+.text-stroke {
+  -webkit-text-fill-color: white;
+  -webkit-text-stroke: 1px black;
+}
