--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,7 +49,7 @@ ul {
 }
 
 h1 {
-  font-size: 96px;
+  font-size: 100px;
   font-weight: 100;
 }
 
@@ -60,4 +60,77 @@ h1 {
 .text-stroke {
   -webkit-text-fill-color: white;
   -webkit-text-stroke: 1px black;
+}
+
+.container {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  position: fixed;
+  left: 5%;
+  padding: 100px 0 0;
+}
+
+.emoji-icon {
+  font-size: 30px;
+}
+
+.social-icons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  li {
+    margin: 20px 0;
+  }
+
+  &::after {
+    content: '';
+    width: 1px;
+    // height: 80px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(0, 0, 0, 0.2);
+    display: inline-block;
+    animation: springUp .3s linear forwards;
+  }
+}
+
+.email {
+  position: fixed;
+  right: 60px;
+  bottom: 0;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+
+  &::after {
+    content: '';
+    width: 1px;
+    // height: 80px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(0, 0, 0, 0.2);
+    display: inline-block;
+    margin-top: 25px;
+    animation: springUp .3s linear forwards;
+  }
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  height: 100vh;
+}
+
+@keyframes springUp {
+  from{
+    height: 0;
+  }
+  to{
+    height: 80px;
+  }
 }
