--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,8 @@
 }
 
 :root {
-  --primary: #000;
+  --primary: rgb(25, 21, 69);
+  --bg: rgba(25, 21, 69, 0.05);
 }
 
 * {
@@ -28,6 +29,8 @@ body {
   font-family: 'SofiaPro', cursive;
   font-style: normal;
   font-weight: 400;
+  background-color: var(--bg);
+  color: var(--primary);
 }
 
 a {
@@ -53,7 +56,7 @@ h1 {
   font-size: 40px;
 
   @include tablet {
-    font-size: 70px;
+    font-size: 80px;
   }
 
   @include desktop {
@@ -66,8 +69,8 @@ h1 {
 }
 
 .text-stroke {
-  -webkit-text-fill-color: white;
-  -webkit-text-stroke: 1px black;
+  -webkit-text-fill-color: var(--bg);
+  -webkit-text-stroke: 1px var(--primary);
 }
 
 .container {
