Fix build issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,7 @@
 
 @font-face {
   font-family: SofiaPro;
-  src: local('SofiaPro'), local('SofiaPro'),
-    url(../fonts/sofiapro-light.otf) format('opentype');
+  src: local('SofiaPro'), url(../fonts/sofiapro-light.otf) format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
