--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@ body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 100;
   background-color: var(--bg);
   color: var(--primary);
 }
@@ -44,15 +44,34 @@ ul {
 
 h1 {
   font-weight: 900;
-  font-size: 40px;
+  font-size: 2.5rem;
 
   @include tablet {
     font-size: 80px;
   }
 
   @include desktop {
-    font-size: 100px;
+    font-size: 6.25rem;
   }
+}
+
+h3,h4 {
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 2.5rem;
+  margin-bottom: 50px;
+}
+
+h4 {
+  font-size: 1.5rem;
+  // margin-bottom: 20px;
+}
+
+p {
+  font-size: 1.5rem;
+  line-height: 2;
 }
 
 .center {
@@ -62,6 +81,11 @@ h1 {
 .text-stroke {
   -webkit-text-fill-color: var(--bg);
   -webkit-text-stroke: 1px var(--primary);
+}
+
+.underline {
+  border-bottom: 0.1rem double var(--primary);
+  width: fit-content;
 }
 
 .container {
@@ -111,7 +135,6 @@ h1 {
   &::after {
     content: '';
     width: 1px;
-    // height: 80px;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(0, 0, 0, 0.2);
     display: inline-block;
     animation: springUp .3s linear forwards;
@@ -128,7 +151,6 @@ h1 {
   &::after {
     content: '';
     width: 1px;
-    // height: 80px;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(0, 0, 0, 0.2);
     display: inline-block;
     margin-top: 25px;
@@ -144,12 +166,12 @@ h1 {
   }
 }
 
-.intro {
+.section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: left;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 @keyframes springUp {
@@ -158,5 +180,22 @@ h1 {
   }
   to{
     height: 80px;
+  }
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 100px;
+  height: 100%;
+
+  &-item {
+    width: 100%;
+    margin-bottom: 50px;
+
+    @include tablet {
+      width: 45%;
+    }
   }
 }
