--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,7 +66,7 @@ h3 {
 
 h4 {
   font-size: 1.5rem;
-  // margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 p {
@@ -85,6 +85,7 @@ p {
 
 .underline {
   border-bottom: 0.1rem double var(--primary);
+  display: inline;
   width: fit-content;
 }
 
@@ -172,6 +173,11 @@ p {
   justify-content: center;
   align-items: left;
   min-height: 100vh;
+}
+
+.intro {
+  height: 100%;
+  margin: 50px 0 200px 0;
 }
 
 @keyframes springUp {
