--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,5 +1,5 @@
 ---
-
+import './../../assets/css/style.scss'
 ---
 
 <!DOCTYPE html>
@@ -18,13 +18,13 @@
   <meta name="author" content="Adekunle Oseni" />
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png">
-  <link rel="manifest" href="./public/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <title>Oadex.dev</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/style.scss" />
+  <!-- <link rel="stylesheet" href="./assets/css/style.scss" /> -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script>
   <!-- <script>
     window.dataLayer = window.dataLayer || [];
