chore: remove redundant index.html file

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,5 +1,5 @@
 ---
-import './../../assets/css/style.scss'
+import './../../assets/css/style.scss';
 ---
 
 <!DOCTYPE html>
@@ -24,7 +24,6 @@ import './../../assets/css/style.scss'
   <link rel="manifest" href="/site.webmanifest">
   <title>Oadex.dev</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="./assets/css/style.scss" /> -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script>
   <!-- <script>
     window.dataLayer = window.dataLayer || [];
