--- a/src/assets/css/_utils.scss
+++ b/src/assets/css/_utils.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/breakpoint-sass/stylesheets/breakpoint'; // absolute path to node_modules to fix issue with parcel build
+@import 'breakpoint-sass/stylesheets/breakpoint'; // absolute path to node_modules to fix issue with parcel build
 
 @mixin mobile {
   @include breakpoint(0 600px) {
