--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -24,8 +24,8 @@ import { Icon } from 'astro-icon';
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <title>Oadex.dev</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script>
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet"> -->
+  <!-- <script defer src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script> -->
   <!-- <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
