--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import PageLayout from "../layouts/PageLayout.astro";
     </header>
     <section class="intro">
       <h3>Hey there 👋🏾,</h3>
-      <p>I am Adekunle, mostly called Kunle (Koon-lay) in short.</p>
+      <p>I am Adekunle, mostly called Kunle (Koon-lay).</p>
       <p> I
         love the web with all my heart, being an introvert who likes to spend a
         good chunk of my time surfing the web.</p>
