fix: copy changes on the landing page

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -58,6 +58,7 @@ import { Icon } from 'astro-icon';
   </nav>
   <slot />
   <a href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle" class="email">adekunleoseni47@gmail.com</a>
+  <footer class="center"> &copy; 2022 Adekunle.</footer>
   <script>
     import '../assets/js/main.js';
   </script>
