--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import PageLayout from "../layouts/PageLayout.astro";
       <h1 class="name"><span class="text-stroke">Amsterdam,</span> <br> The
         Netherlands.</h1>
     </header>
-    <section class="intro">
+    <section class="intro" id="intro">
       <h3>Hey there 👋🏾,</h3>
       <p>I am Adekunle, mostly called Kunle (Koon-lay).</p>
       <p> I
@@ -23,35 +23,31 @@ import PageLayout from "../layouts/PageLayout.astro";
         applications at scale.</p>
       <p>Favourite catch phrase is: "Always betting on the Web"</p>
     </section>
-    <section class="section">
+    <section class="section" id="work-history">
       <h3 class="heading">Work History</h3>
       <div class="flex">
         <div class="flex-item">
-          <h4>Momentive AI</h4>
+          <h4>Momentive AI (Surveymonkey) - Current</h4>
           <p>
-            Currently work here on the Act team for the
+            Currently work here on the CRM team for the
             <a class="underline" href="https://www.getfeedback.com/"
               rel="noopener" target="_blank"
               aria-label="Getfeedback">GetFeedback</a> platform. My day-to-day
-            involves building out web experiences for the Automations Layer.
+            involves building out web experiences for the Automations and Integrations Layer.
           </p>
         </div>
         <div class="flex-item">
-          <h4>Deimos Cloud</h4>
-          <p>
-            Love at first hearing 😀
-          </p>
+          <h4>Deimos Cloud - 2020</h4>
           <p>I worked at <a class="underline" href="https://deimos.io/"
               rel="noopener" target="_blank" aria-label="Deimos">Deimos</a>
             firstly as a Contractor, before transitioning
-            into full-time role; after a slightly disappointing experience at a
-            previous job where I had a short stint.</p>
+            into full-time role.</p>
           <p>I had a great time here, working with A+ team to help businesses
             build Cloud Native applications with best practices baked in.</p>
-          <p>🚀 Proudly a Deimos martian and Alumnus </p>
+          <p>Proud Deimos Alumnus; To the moon 🚀</p>
         </div>
         <div class="flex-item">
-          <h4>Konga Online Shopping Ltd.</h4>
+          <h4>Konga Online Shopping Ltd - 2018</h4>
           <p>
             Joined Konga as an Engineering Cadet, straight out of university.
             I was sold the mission to rebuild the customer facing web app
@@ -62,20 +58,20 @@ import PageLayout from "../layouts/PageLayout.astro";
             developer experience.
           </p>
           <p>I got excited about the mission and rolled my sleeves to join the
-            team at work. We deployed the first release of the new application
-            about 7 months later, for yakata sales.</p>
+            team at work. We released the first version of the new application
+            about 7 months later, for yakata sales (black friday).</p>
           <p>In this time, I got retained as a Software Engineer contributing to
             the engineering goals.</p>
         </div>
         <div class="flex-item">
-          <h4>Hotels NG</h4>
+          <h4>Hotels NG - 2016</h4>
           <p>
             Humble beginning as a candidate of the first HNG internship in 2016.
             This was a great experience that introduced me to the world of
             professional work setting.
           </p>
-          <p>Fortunately, I finished as one of the few finalists with other
-            awesome folks who are still my guyz till date. :smile:</p>
+          <p>Finished as one of the few finalists with other
+            awesome folks.</p>
           <p>HNG was an eye opener and I'm a product of the internship who has
             moved on to make a decent career, just like many others.</p>
         </div>
