update title and fix accessibility ordering

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -68,10 +68,13 @@ h1 {
   }
 }
 
-h3,h4 {
+h2,
+h3,
+h4 {
   font-family: var(--font-regular);
 }
 
+h2,
 h3 {
   font-size: 2.5rem;
   margin-bottom: 50px;
