--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -23,7 +23,7 @@ import { Icon } from 'astro-icon';
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <title>Oadex.dev</title>
+  <title>adexot's site</title>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet"> -->
   <!-- <script defer src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script> -->
   <!-- <script>
