feat: add a til page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,20 +7,25 @@ import PageLayout from "../layouts/PageLayout.astro";
     <header class="section">
       <h1 class="name"><span class="text-stroke">Oseni</span> Adekunle.</h1>
       <h1 class="name">
-        <span class="text-stroke">Software</span> Engineer.
+        <span class="text-stroke">Software</span>
+        Engineer.
       </h1>
-      <h1 class="name"><span class="text-stroke">Amsterdam,</span> <br> The
-        Netherlands.</h1>
+      <h1 class="name">
+        <span class="text-stroke">Amsterdam,</span>
+        <br /> The Netherlands.
+      </h1>
     </header>
     <section class="intro" id="intro">
       <h2>Hey there 👋🏾,</h2>
       <p>I am Adekunle, mostly called Kunle (Koon-lay).</p>
-      <p> I
-        love the web with all my heart, being an introvert who likes to spend a
-        good chunk of my time surfing the web.</p>
-      <p>I work as a Software Engineer, specializing in Frontend technologies. I
-        have an unwavering desire to build performant web
-        applications at scale.</p>
+      <p>
+        I love the web with all my heart, being an introvert who likes to spend
+        a good chunk of my time surfing the web.
+      </p>
+      <p>
+        I work as a Software Engineer, specializing in Frontend technologies. I
+        have an unwavering desire to build performant web applications at scale.
+      </p>
       <p>Favourite catch phrase is: "Always betting on the Web"</p>
     </section>
     <section class="section" id="work-history">
@@ -30,38 +35,58 @@ import PageLayout from "../layouts/PageLayout.astro";
           <h4>Momentive AI (Surveymonkey) - Current</h4>
           <p>
             Currently work here on the CRM team for the
-            <a class="underline" href="https://www.getfeedback.com/"
-              rel="noopener" target="_blank"
-              aria-label="Getfeedback">GetFeedback</a> platform. My day-to-day
-            involves building out web experiences for the Automations and Integrations Layer.
+            <a
+              class="underline"
+              href="https://www.getfeedback.com/"
+              rel="noopener"
+              target="_blank"
+              aria-label="Getfeedback">GetFeedback</a
+            > platform. My day-to-day involves building out web experiences for the
+            Automations and Integrations Layer.
           </p>
         </div>
         <div class="flex-item">
           <h4>Deimos Cloud - 2020</h4>
-          <p>I worked at <a class="underline" href="https://deimos.io/"
-              rel="noopener" target="_blank" aria-label="Deimos">Deimos</a>
-            firstly as a Contractor, before transitioning
-            into full-time role.</p>
-          <p>I had a great time here, working with A+ team to help businesses
-            build Cloud Native applications with best practices baked in.</p>
+          <p>
+            I worked at <a
+              class="underline"
+              href="https://deimos.io/"
+              rel="noopener"
+              target="_blank"
+              aria-label="Deimos">Deimos</a
+            >
+            firstly as a Contractor, before transitioning into full-time role.
+          </p>
+          <p>
+            I had a great time here, working with A+ team to help businesses
+            build Cloud Native applications with best practices baked in.
+          </p>
           <p>Proud Deimos Alumnus; To the moon 🚀</p>
         </div>
         <div class="flex-item">
           <h4>Konga Online Shopping Ltd - 2018</h4>
           <p>
-            Joined Konga as an Engineering Cadet, straight out of university.
-            I was sold the mission to rebuild the customer facing web app
-            <a class="underline" href="https://www.konga.com/" rel="noopener"
-              target="_blank" aria-label="Konga">Konga</a>, with a focus on
-            performance, responsiveness,
-            accessibility, reduced cost of operation, and of course a better
-            developer experience.
+            Joined Konga as an Engineering Cadet, straight out of university. I
+            was sold the mission to rebuild the customer facing web app
+            <a
+              class="underline"
+              href="https://www.konga.com/"
+              rel="noopener"
+              target="_blank"
+              aria-label="Konga">Konga</a
+            >, with a focus on performance, responsiveness, accessibility,
+            reduced cost of operation, and of course a better developer
+            experience.
           </p>
-          <p>I got excited about the mission and rolled my sleeves to join the
+          <p>
+            I got excited about the mission and rolled my sleeves to join the
             team at work. We released the first version of the new application
-            about 7 months later, for yakata sales (black friday).</p>
-          <p>In this time, I got retained as a Software Engineer contributing to
-            the engineering goals.</p>
+            about 7 months later, for yakata sales (black friday).
+          </p>
+          <p>
+            In this time, I got retained as a Software Engineer contributing to
+            the engineering goals.
+          </p>
         </div>
         <div class="flex-item">
           <h4>Hotels NG - 2016</h4>
@@ -70,10 +95,11 @@ import PageLayout from "../layouts/PageLayout.astro";
             This was a great experience that introduced me to the world of
             professional work setting.
           </p>
-          <p>Finished as one of the few finalists with other
-            awesome folks.</p>
-          <p>HNG was an eye opener and I'm a product of the internship who has
-            moved on to make a decent career, just like many others.</p>
+          <p>Finished as one of the few finalists with other awesome folks.</p>
+          <p>
+            HNG was an eye opener and I'm a product of the internship who has
+            moved on to make a decent career, just like many others.
+          </p>
         </div>
       </div>
     </section>
