--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,67 +1,93 @@
 ---
-import '../assets/css/style.scss';
-import { Icon } from 'astro-icon';
+import "../assets/css/style.scss";
+import { Icon } from "astro-icon";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Software Engineer 👨🏾‍💻, specializing in Frontend Development." />
-  <meta name="keywords"
-    content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM" />
-  <meta name="author" content="Adekunle Oseni" />
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <title>adexot's site</title>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet"> -->
-  <!-- <script defer src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script> -->
-  <!-- <script>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://www.googletagmanager.com"
+      crossorigin
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Software Engineer 👨🏾‍💻, specializing in Frontend Development."
+    />
+    <meta
+      name="keywords"
+      content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM"
+    />
+    <meta name="author" content="Adekunle Oseni" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>adexot's site</title>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet"> -->
+    <!-- <script defer src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script> -->
+    <!-- <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-ECS101WP4Z');
   </script> -->
-</head>
+  </head>
 
-<body>
-  <nav class="nav">
-    <a class="emoji-icon" href='/'>👨🏾‍</a>
-    <ul class="social-icons">
-      <li>
-        <a href="https://github.com/adexot" rel="noopener" target="_blank" aria-label="Github">
-          <Icon name="github" height="20" width="20"/>
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/oadex_09" rel="noopener" target="_blank" aria-label="Twitter">
-          <Icon name="twitter" height="20" width="20"/>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/adekunle-oseni" rel="noopener" target="_blank" aria-label="LinkedIn">
-          <Icon name="linkedin" height="20" width="20"/>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <slot />
-  <a href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle" class="email">adekunleoseni47@gmail.com</a>
-  <footer class="center"> &copy; 2022 Adekunle.</footer>
-  <script>
-    import '../assets/js/main.js';
-  </script>
-</body>
-
+  <body>
+    <nav class="nav">
+      <a class="emoji-icon" href="/">👨🏾‍</a>
+      <a class="emoji-icon" href="/til">TIL</a>
+      <ul class="social-icons">
+        <li>
+          <a
+            href="https://github.com/adexot"
+            rel="noopener"
+            target="_blank"
+            aria-label="Github"
+          >
+            <Icon name="github" height="20" width="20" />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://twitter.com/oadex_09"
+            rel="noopener"
+            target="_blank"
+            aria-label="Twitter"
+          >
+            <Icon name="twitter" height="20" width="20" />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/adekunle-oseni"
+            rel="noopener"
+            target="_blank"
+            aria-label="LinkedIn"
+          >
+            <Icon name="linkedin" height="20" width="20" />
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <slot />
+    <a
+      href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle"
+      class="email">adekunleoseni47@gmail.com</a
+    >
+    <footer class="center">&copy; 2022 Adekunle.</footer>
+    <script>
+      import "../assets/js/main.js";
+    </script>
+  </body>
 </html>
