--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,18 @@ import PageLayout from "../layouts/PageLayout.astro";
 <PageLayout>
   <main class="container">
     <header class="section">
-      <h1 class="name"><span class="text-stroke">Oseni</span> Adekunle.</h1>
-      <h1 class="name">
-        <span class="text-stroke">Software</span>
-        Engineer.
+      <h1 class="name glow-wrap">
+        <span class="text-stroke glow-1">Oseni</span>
+        <span class="glow-2">Adekunle.</span>
       </h1>
-      <h1 class="name">
-        <span class="text-stroke">Amsterdam,</span>
-        <br /> The Netherlands.
+      <h1 class="name glow-wrap">
+        <span class="text-stroke glow-2">Software</span>
+        <span class="glow-3">Engineer.</span>
+      </h1>
+      <h1 class="name glow-wrap">
+        <span class="text-stroke glow-3">Amsterdam,</span>
+        <br />
+        <span class="glow-4">The Netherlands.</span>
       </h1>
     </header>
     <section class="intro" id="intro">
