--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,6 +1,7 @@
 ---
 import "../assets/css/style.scss";
 import { Icon } from "astro-icon";
+import { ViewTransitions } from 'astro:transitions';
 ---
 
 <!DOCTYPE html>
@@ -41,6 +42,7 @@ import { Icon } from "astro-icon";
 
     gtag('config', 'G-ECS101WP4Z');
   </script> -->
+  <ViewTransitions />
   </head>
 
   <body>
