chore: update current company

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import PageLayout from "../layouts/PageLayout.astro";
       <h3 class="heading">Work History</h3>
       <div class="flex">
         <div class="flex-item">
-          <h4>Momentive AI (Surveymonkey) - Current</h4>
+          <h4>SurveyMonkey - Current</h4>
           <p>
             Currently work here on the CRM team for the
             <a
