fix: update content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,15 +6,15 @@ import PageLayout from "../layouts/PageLayout.astro";
   <main class="container">
     <header class="section">
       <h1 class="name glow-wrap">
-        <span class="text-stroke glow-1">Oseni</span>
+        <span class="text-stroke glow-1">Oseni&nbsp;</span>
         <span class="glow-2">Adekunle.</span>
       </h1>
       <h1 class="name glow-wrap">
-        <span class="text-stroke glow-2">Software</span>
+        <span class="text-stroke glow-2">Software&nbsp;</span>
         <span class="glow-3">Engineer.</span>
       </h1>
       <h1 class="name glow-wrap">
-        <span class="text-stroke glow-3">Amsterdam,</span>
+        <span class="text-stroke glow-3">Amsterdam,&nbsp;</span>
         <br />
         <span class="glow-4">The Netherlands.</span>
       </h1>
@@ -22,15 +22,13 @@ import PageLayout from "../layouts/PageLayout.astro";
     <section class="intro" id="intro">
       <h2>Hey there 👋🏾,</h2>
       <p>I am Adekunle, mostly called Kunle (Koon-lay).</p>
-      <p>
-        I love the web with all my heart, being an introvert who likes to spend
-        a good chunk of my time surfing the web.
-      </p>
+      <br />
       <p>
         I work as a Software Engineer, specializing in Frontend technologies. I
         have an unwavering desire to build performant web applications at scale.
       </p>
-      <p>Favourite catch phrase is: "Always betting on the Web"</p>
+      <br />
+      <p>Favourite catch phrase: "Always betting on the Web"</p>
     </section>
     <section class="section" id="work-history">
       <h3 class="heading">Work History</h3>
@@ -38,15 +36,20 @@ import PageLayout from "../layouts/PageLayout.astro";
         <div class="flex-item">
           <h4>SurveyMonkey - Current</h4>
           <p>
-            Currently work here on the CRM team for the
+            Currently work in the Analysis Org - Reporting team; Helping to
+            create delightful charts that makes data insightful to our
+            customers.
+          </p>
+          <p>
+            Previously worked on the CRM team for the
             <a
               class="underline"
               href="https://www.getfeedback.com/"
               rel="noopener"
               target="_blank"
               aria-label="Getfeedback">GetFeedback</a
-            > platform. My day-to-day involves building out web experiences for the
-            Automations and Integrations Layer.
+            > platform; building out web experiences for the Automations and
+            Integrations Layer.
           </p>
         </div>
         <div class="flex-item">
@@ -59,7 +62,7 @@ import PageLayout from "../layouts/PageLayout.astro";
               target="_blank"
               aria-label="Deimos">Deimos</a
             >
-            firstly as a Contractor, before transitioning into full-time role.
+             firstly as a Contractor, before transitioning into full-time role.
           </p>
           <p>
             I had a great time here, working with A+ team to help businesses
