--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,10 +1,10 @@
 ---
 import "../assets/css/style.scss";
-import { Icon } from "astro-icon";
-import { ViewTransitions } from 'astro:transitions';
+import { Icon } from "astro-icon/components";
+import { ViewTransitions } from "astro:transitions";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -42,7 +42,7 @@ import { ViewTransitions } from 'astro:transitions';
 
     gtag('config', 'G-ECS101WP4Z');
   </script> -->
-  <ViewTransitions />
+    <ViewTransitions />
   </head>
 
   <body>
@@ -57,7 +57,7 @@ import { ViewTransitions } from 'astro:transitions';
             target="_blank"
             aria-label="Github"
           >
-            <Icon name="github" height="20" width="20" />
+            <Icon name="github" height={20} width={20} />
           </a>
         </li>
         <li>
@@ -67,7 +67,7 @@ import { ViewTransitions } from 'astro:transitions';
             target="_blank"
             aria-label="Twitter"
           >
-            <Icon name="twitter" height="20" width="20" />
+            <Icon name="twitter" height={20} width={20} />
           </a>
         </li>
         <li>
@@ -77,7 +77,7 @@ import { ViewTransitions } from 'astro:transitions';
             target="_blank"
             aria-label="LinkedIn"
           >
-            <Icon name="linkedin" height="20" width="20" />
+            <Icon name="linkedin" height={20} width={20} />
           </a>
         </li>
       </ul>
