feat: update work history and add tenure

--- a/src/components/workHistory.astro
+++ b/src/components/workHistory.astro
@@ -1,12 +1,25 @@
 <section class="section" id="work-history">
     <h3 class="heading">Work History</h3>
     <div class="flex">
+        <!-- SurveyMonkey -->
         <div class="flex-item">
-            <h4>SurveyMonkey - Current</h4>
+            <h4>
+                <a
+                    class="underline"
+                    href="https://surveymonkey.com/"
+                    rel="noopener"
+                    target="_blank"
+                    aria-label="surveymonkey"
+                    >SurveyMonkey
+                </a>, <span class="years">2021 - Current</span>
+            </h4>
             <p>
-                Currently work in the Analysis Org - Reporting team; Helping to
+                <!-- Currently work in the Analysis Org - Reporting team; Helping to
                 create delightful charts that makes data insightful to our
-                customers.
+                customers.  -->
+                Creating insightful and delightful data tiles experience on the Analyze
+                Insights team. I contribute to the effort to simplify how users visualize
+                raw data using charts, tables, open text etc.
             </p>
             <p>
                 Previously worked on the CRM team for the
@@ -20,26 +33,42 @@
                 Integrations Layer.
             </p>
         </div>
+
+        <!-- Deimos Cloud -->
         <div class="flex-item">
-            <h4>Deimos Cloud - 2020</h4>
-            <p>
-                I worked at <a
+            <h4>
+                <a
                     class="underline"
                     href="https://deimos.io/"
                     rel="noopener"
                     target="_blank"
-                    aria-label="Deimos">Deimos</a
-                >
-                firstly as a Contractor, before transitioning into full-time role.
+                    aria-label="deimos">Deimos Cloud</a
+                >, <span class="years">2019 - 2021</span>
+            </h4>
+            <p>
+                I worked at firstly as a Contractor, before transitioning into
+                full-time role.
             </p>
             <p>
-                I had a great time here, working with A+ team to help businesses
-                build Cloud Native applications with best practices baked in.
+                Built a PWA for a logistics company in the Middle-Eastern region
+                that serves over a million users. This required building out a
+                Web app and a GraphQL server that served as the BFF (Backend for
+                Frontend) layer for aggregating data from backend services.
             </p>
-            <p>Proud Deimos Alumnus; To the moon 🚀</p>
+            <h5>Proud Deimos Alumnus; To the moon 🚀</h5>
         </div>
+
+        <!-- Konga -->
         <div class="flex-item">
-            <h4>Konga Online Shopping Ltd - 2018</h4>
+            <h4>
+                <a
+                    class="underline"
+                    href="https://www.konga.com/"
+                    rel="noopener"
+                    target="_blank"
+                    aria-label="Konga">Konga Online Shopping Ltd</a
+                >, <span class="years">2018 - 2019</span>
+            </h4>
             <p>
                 Joined Konga as an Engineering Cadet, straight out of
                 university. I was sold the mission to rebuild the customer
@@ -65,8 +94,18 @@
                 to the engineering goals.
             </p>
         </div>
+
+        <!-- HotelsNG -->
         <div class="flex-item">
-            <h4>Hotels NG - 2016</h4>
+            <h4>
+                <a
+                    class="underline"
+                    href="https://www.hotels.ng/"
+                    rel="noopener"
+                    target="_blank"
+                    aria-label="hotelsNG">Hotels NG</a
+                >, <span class="years">2016</span>
+            </h4>
             <p>
                 Humble beginning as a candidate of the first HNG internship in
                 2016. This was a great experience that introduced me to the
