ft: make year copy dynamic

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -87,7 +87,7 @@ import { ViewTransitions } from "astro:transitions";
       href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle"
       class="email">adekunleoseni47@gmail.com</a
     >
-    <footer class="center">&copy; 2022 Adekunle.</footer>
+    <footer class="center">&copy; {new Date().getFullYear()}, A.O.</footer>
     <script>
       import "../assets/js/main.js";
     </script>
